<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/change_password_current_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Current Password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/change_password_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="New Password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/change_password_confirm_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm New Password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/change_password_error_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">

        <Button
            android:id="@+id/change_password_cancel_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Cancel"
            android:textColor="#EEEEEE"
            android:layout_weight="0.5"
            android:background="@drawable/btn_shape_selector_primary"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/change_password_update_password_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Update Password"
            android:textColor="#EEEEEE"
            android:background="@drawable/btn_shape_selector_primary"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>