<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragments.ProfileFragment">

    <FrameLayout
        android:id="@+id/profile_top_panel_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profile_username_tv"
            android:layout_width="467dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="Temp Username"
            android:textColor="@color/colorAccent"
            android:textSize="45dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_user_iv"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintTop_toBottomOf="@id/profile_username_tv" />

    </FrameLayout>

    <Button
        android:id="@+id/profile_settings_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="Settings"
        android:textStyle="bold"
        android:textColor="#EEEEEE"
        android:textSize="15dp"
        android:background="@drawable/btn_shape_selector_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_top_panel_container" />

    <Button
        android:id="@+id/profile_friend_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:background="@drawable/btn_shape_selector_primary"
        android:text="Friends"
        android:textColor="#EEEEEE"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_top_panel_container" />

    <Button
        android:id="@+id/profile_logout_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@drawable/btn_shape_selector_accent"
        android:text="Logout"
        android:textColor="#EEEEEE"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_top_panel_container" />


</androidx.constraintlayout.widget.ConstraintLayout>